k8s-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /api/v1/microservice-1
        backend:
          serviceName: microservice-1
          servicePort: 8081
      - path: /api/v1/microservice-2
        backend:
          serviceName: microservice-2
          servicePort: 8082
      - path: /api/v1/microservice-3
        backend:
          serviceName: microservice-3
          servicePort: 8083
  - host: api-gateway.info
    http:
      paths:
      - path: /api/v1/microservice-1
        backend:
          serviceName: microservice-1
          servicePort: 8081
      - path: /api/v1/microservice-2
        backend:
          serviceName: microservice-2
          servicePort: 8082
      - path: /api/v1/microservice-3
        backend:
          serviceName: microservice-3
          servicePort: 8083
